Mobile Menu now has a banner background that follows user. Fixed z-index problems, so menu takes precedence.

--- a/CSS/mobileMenuStyles.css
+++ b/CSS/mobileMenuStyles.css
@@ -5,7 +5,7 @@ MOBILE MENU ICON
 #menuBar {
   width: 35px;
   height: 30px;
-  margin: 30px 0 20px 20px;
+  margin: 18px 0 20px 20px;
   cursor: pointer;
 }
 
@@ -13,7 +13,7 @@ MOBILE MENU ICON
 .bar {
   height: 5px;
   width: 100%;
-  background-color: black;
+  background-color: white;
   display: block;
   border-radius: 5px;
   transition: 0.3s ease;
@@ -98,7 +98,7 @@ MENU BACKGROUND
 }
 
 .menuBackground {
-  z-index: 1;
+  z-index: 3;
   width: 0;
   height: 0;
   background: radial-gradient(circle, #000000, #414141);
@@ -106,11 +106,11 @@ MENU BACKGROUND
 }
 
 #menuBar {
-  z-index: 2;
+  z-index: 4;
 }
 
 .changeBackground {
-  width: 400px;
-  height: 430px;
+  width: 450px;
+  height: 500px;
   transform: translate(-25%, -10%); /* Moves the background a bit to only show some curve to the menu */
 }
